[package]
name = "cr7"
version = "0.1.0"
authors = ["Bernardo Lins <bernardolins28@gmail.com>"]

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.13.0"
libc = "0.2.51"
tempfile = "3"
failure = "0.1.5"
exitcode = "1.1.2"

[dev-dependencies]
rand = "0.6"
